[package]
name    = "rorschach"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Binary data definition and formatter."
repository  = "https://github.com/meh/rorschach"
keywords    = ["formatter", "binary", "hex"]

[dependencies]
byteorder = "0.5"
ansi_term = "0.7"
