[package]
name    = "rorschach"
version = "0.1.2"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"
exclude = ["screenshots/*"]

description = "Binary data definition and formatter."
repository  = "https://github.com/meh/rorschach"
keywords    = ["formatter", "binary", "hex"]

[dependencies]
byteorder = "0.5"
ansi_term = "0.7"
